tests/e2e/snapshots/e2e__analysis__view_analyzed_crates.snap
---
source: tests/e2e/analysis.rs
description: "// → project1/cairo_project.toml\n[crate_roots]\nproject1 = \"src\"\n\n// → project1/src/lib.cairo\nfn main() {}\n\n// → project2/cairo_project.toml\n[crate_roots]\nproject2 = \"src\"\n\n// → project2/src/lib.cairo\nfn main() {}\n\n// → project2/subproject/cairo_project.toml\n[crate_roots]\nsubproject = \"src\"\n\n// → project2/subproject/src/lib.cairo\nfn main() {}"
expression: "normalize(&ls, output)"
snapshot_kind: text
---
# Analyzed Crates
---
```json
{
  "name": "core",
  "source_paths": [
    "[SCARB_REGISTRY_STD]/core/src/lib.cairo"
  ],
  "settings": {
    "name": null,
    "edition": "2025_12",
    "version": "2.20.0",
    "cfg_set": null,
    "dependencies": {},
    "experimental_features": {
      "negative_impls": true,
      "associated_item_constraints": true,
      "coupons": true,
      "user_defined_inline_macros": true,
      "repr_ptrs": true
    }
  },
  "linter_configuration": "Off",
  "plugins": {
    "builtin_plugins": [
      "AssertMacros",
      "Executable",
      "CairoTest"
    ]
  }
}

{
  "name": "project1",
  "source_paths": [
    "[ROOT]/project1/src/lib.cairo"
  ],
  "settings": {
    "name": null,
    "edition": "2023_01",
    "version": null,
    "cfg_set": null,
    "dependencies": {},
    "experimental_features": {
      "negative_impls": false,
      "associated_item_constraints": false,
      "coupons": false,
      "user_defined_inline_macros": false,
      "repr_ptrs": false
    }
  },
  "linter_configuration": "Off",
  "plugins": {
    "builtin_plugins": [
      "AssertMacros",
      "Executable",
      "CairoTest",
      "Starknet"
    ]
  }
}

{
  "name": "project2",
  "source_paths": [
    "[ROOT]/project2/src/lib.cairo"
  ],
  "settings": {
    "name": null,
    "edition": "2023_01",
    "version": null,
    "cfg_set": null,
    "dependencies": {},
    "experimental_features": {
      "negative_impls": false,
      "associated_item_constraints": false,
      "coupons": false,
      "user_defined_inline_macros": false,
      "repr_ptrs": false
    }
  },
  "linter_configuration": "Off",
  "plugins": {
    "builtin_plugins": [
      "AssertMacros",
      "Executable",
      "CairoTest",
      "Starknet"
    ]
  }
}

{
  "name": "subproject",
  "source_paths": [
    "[ROOT]/project2/subproject/src/lib.cairo"
  ],
  "settings": {
    "name": null,
    "edition": "2023_01",
    "version": null,
    "cfg_set": null,
    "dependencies": {},
    "experimental_features": {
      "negative_impls": false,
      "associated_item_constraints": false,
      "coupons": false,
      "user_defined_inline_macros": false,
      "repr_ptrs": false
    }
  },
  "linter_configuration": "Off",
  "plugins": {
    "builtin_plugins": [
      "AssertMacros",
      "Executable",
      "CairoTest",
      "Starknet"
    ]
  }
}
```
