tests/e2e/snapshots/e2e__analysis__view_analyzed_crates_assert_macros.snap
---
source: tests/e2e/analysis.rs
description: "// → Scarb.toml\n[package]\nname = \"a\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\nassert_macros = \"2\"\n\n// → src/lib.cairo\nfn main() {}"
expression: "normalize(&ls, output)"
snapshot_kind: text
---
# Analyzed Crates
---
```json
{
  "name": "a",
  "source_paths": [
    "[ROOT]/src/lib.cairo"
  ],
  "settings": {
    "name": "a",
    "edition": "2025_12",
    "version": "0.1.0",
    "cfg_set": [
      [
        "target",
        "lib"
      ],
      [
        "target",
        "test"
      ],
      "test"
    ],
    "dependencies": {
      "a": {
        "discriminator": "a 0.1.0 (path+[ROOT_URL]Scarb.toml)"
      },
      "core": {
        "discriminator": null
      }
    },
    "experimental_features": {
      "negative_impls": false,
      "associated_item_constraints": false,
      "coupons": false,
      "user_defined_inline_macros": false,
      "repr_ptrs": false
    }
  },
  "linter_configuration": "Off",
  "plugins": {
    "builtin_plugins": [
      "AssertMacros"
    ]
  }
}

{
  "name": "core",
  "source_paths": [
    "[SCARB_REGISTRY_STD]/core/src/lib.cairo"
  ],
  "settings": {
    "name": "core",
    "edition": "2025_12",
    "version": "2.20.0",
    "cfg_set": [
      [
        "target",
        "lib"
      ],
      [
        "target",
        "test"
      ]
    ],
    "dependencies": {
      "core": {
        "discriminator": null
      }
    },
    "experimental_features": {
      "negative_impls": true,
      "associated_item_constraints": true,
      "coupons": true,
      "user_defined_inline_macros": true,
      "repr_ptrs": false
    }
  },
  "linter_configuration": "Off",
  "plugins": {
    "builtin_plugins": [
      "AssertMacros",
      "Executable",
      "CairoTest"
    ]
  }
}
```
